--- a/ToDoList/DetailScreen/DetailViewController.xib
+++ b/ToDoList/DetailScreen/DetailViewController.xib
@@ -11,7 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="ToDoList" customModuleProvider="target">
             <connections>
+                <outlet property="datePicker" destination="zol-Ta-2zo" id="l2X-5u-wc8"/>
+                <outlet property="detailTextField" destination="EU4-9l-cb1" id="XYy-f7-ivj"/>
+                <outlet property="generalView" destination="5Ub-o1-pgR" id="l3Q-Db-etp"/>
                 <outlet property="navigationBar" destination="65y-gB-IBt" id="Qun-c9-o11"/>
+                <outlet property="titleTextField" destination="ToV-U1-Kl6" id="SRV-fp-SwG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,6 +24,36 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Ub-o1-pgR" userLabel="General View">
+                    <rect key="frame" x="20" y="108" width="374" height="230"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Yan-n4-gcj">
+                            <rect key="frame" x="20" y="20" width="334" height="190"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ToV-U1-Kl6">
+                                    <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Detail:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EU4-9l-cb1">
+                                    <rect key="frame" x="0.0" y="70" width="334" height="50"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="zol-Ta-2zo">
+                                    <rect key="frame" x="0.0" y="140" width="334" height="50"/>
+                                </datePicker>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="Yan-n4-gcj" secondAttribute="trailing" constant="20" id="Akf-eS-87Q"/>
+                        <constraint firstItem="Yan-n4-gcj" firstAttribute="top" secondItem="5Ub-o1-pgR" secondAttribute="top" constant="20" id="D6B-jo-KAX"/>
+                        <constraint firstItem="Yan-n4-gcj" firstAttribute="leading" secondItem="5Ub-o1-pgR" secondAttribute="leading" constant="20" id="FKG-gI-0CB"/>
+                        <constraint firstAttribute="bottom" secondItem="Yan-n4-gcj" secondAttribute="bottom" constant="20" id="pQr-BI-9HW"/>
+                    </constraints>
+                </view>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="65y-gB-IBt">
                     <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                     <items>
@@ -30,11 +64,15 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="5Ub-o1-pgR" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="1dj-Vv-tz3"/>
+                <constraint firstItem="5Ub-o1-pgR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="2Ch-db-7qa"/>
                 <constraint firstItem="65y-gB-IBt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="8bW-Ne-cQk"/>
                 <constraint firstItem="65y-gB-IBt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Dbg-yq-yoB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5Ub-o1-pgR" secondAttribute="trailing" constant="20" id="n4i-5E-gro"/>
+                <constraint firstItem="5Ub-o1-pgR" firstAttribute="top" secondItem="65y-gB-IBt" secondAttribute="bottom" constant="20" id="nXO-bf-1uK"/>
                 <constraint firstItem="65y-gB-IBt" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="uEA-KW-LL7"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="90"/>
+            <point key="canvasLocation" x="-7.2463768115942031" y="34.821428571428569"/>
         </view>
     </objects>
     <resources>
