--- a/ToDoList/TodoListScreen/TodoListViewController.xib
+++ b/ToDoList/TodoListScreen/TodoListViewController.xib
@@ -9,8 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListViewController" customModule="ToDoList" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TodoListViewController" customModule="ToDoList" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="14M-6s-UXq" id="IhB-Zc-bvl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
