--- a/ToDoList/TodoDetailScreen/TodoDetailViewController.xib
+++ b/ToDoList/TodoDetailScreen/TodoDetailViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="ToDoList" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TodoDetailViewController" customModule="ToDoList" customModuleProvider="target">
             <connections>
                 <outlet property="datePicker" destination="zol-Ta-2zo" id="l2X-5u-wc8"/>
                 <outlet property="detailTextField" destination="EU4-9l-cb1" id="XYy-f7-ivj"/>
